Corrected the optionality computation for the merged model